#2265 Fix wrapping issue

--- a/packages/core/src/components/header/header.scss
+++ b/packages/core/src/components/header/header.scss
@@ -44,7 +44,7 @@
 }
 
 .logo-container {
-  flex: 0 1 auto;
+  flex: 1 1 12.5rem;
   margin-inline-end: units.$u3;
   padding-bottom: units.$u2;
   padding-top: units.$u2;
